[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/ChunkHandler/ChunkHandler.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 230 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 224, 10 )

[node name="ChunkHandler" type="Node"]
script = ExtResource( 1 )

[node name="Triggers" type="Node2D" parent="."]
position = Vector2( 185, 0 )
z_index = 5

[node name="LeftTrigger" type="Area2D" parent="Triggers"]
position = Vector2( -170.891, -9.95264 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/LeftTrigger"]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="RightTrigger" type="Area2D" parent="Triggers"]
position = Vector2( 173.564, -8.24734 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/RightTrigger"]
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="TopTrigger" type="Area2D" parent="Triggers"]
position = Vector2( -5.0638, -181.582 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/TopTrigger"]
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="BottomTrigger" type="Area2D" parent="Triggers"]
position = Vector2( -5.19766, 139.709 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/BottomTrigger"]
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="ChunkContainers" type="Node2D" parent="."]
[connection signal="body_entered" from="Triggers/LeftTrigger" to="." method="_on_LeftTrigger_body_entered"]
[connection signal="body_entered" from="Triggers/RightTrigger" to="." method="_on_RightTrigger_body_entered"]
[connection signal="body_entered" from="Triggers/TopTrigger" to="." method="_on_TopTrigger_body_entered"]
[connection signal="body_entered" from="Triggers/BottomTrigger" to="." method="_on_BottomTrigger_body_entered"]
